--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
