--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "baseUrl": "src"
-  },
-  "include": ["src"]
+    // "baseUrl": "src"
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
+  // "include": ["src"]
 }
