--- a/package.json
+++ b/package.json
@@ -16,21 +16,23 @@
     "@heroui/react": "^2.7.4",
     "@heroui/system": "^2.4.11",
     "@heroui/theme": "^2.4.11",
-    "@mantine/carousel": "^7.17.1",
-    "@mantine/core": "^7.17.1",
-    "@mantine/dropzone": "^7.17.1",
-    "@mantine/form": "^7.17.1",
-    "@mantine/hooks": "^7.17.1",
-    "@mantine/modals": "^7.17.1",
-    "@mantine/notifications": "^7.17.1",
-    "@mantine/nprogress": "^7.17.1",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tanstack/react-query": "^5.66.11",
     "@tanstack/react-router": "^1.112.0",
     "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
+    "class-variance-authority": "^0.7.0",
     "dayjs": "^1.11.13",
-    "embla-carousel-react": "^7.1.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
@@ -38,6 +40,7 @@
     "react-error-boundary": "^5.0.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
@@ -46,21 +49,15 @@
     "@eslint/js": "^9.21.0",
     "@tanstack/router-devtools": "^1.112.0",
     "@tanstack/router-plugin": "^1.112.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@types/node": "^20.4.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "jsdom": "^24.0.0",
-    "postcss": "^8.5.3",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "3",
     "tailwindcss-motion": "^1.1.0",
     "typescript": "~5.7.2",
