--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ VITE_IMAGE_UPLOAD_URL = https://uploads.backendservices.in/api
 VITE_UPLOAD_DIR = saraighat_digital
 VITE_UPLOAD_ID = arodos
 VITE_UPLOAD_PASS = arodos
+VITE_EMAIL_URL = https://send-email-api.backendservices.in/
