--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
+    "noFallthroughCasesInSwitch": false,
+    "noUncheckedSideEffectImports": false,
     // "baseUrl": "src"
     "baseUrl": ".",
     "paths": {
