--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
+    "react-pdf": "^9.2.1",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss-animate": "^1.0.7",
