iframe pdf viewer, image and profile pic fixes

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ VITE_BASE_URL = https://v4.frontql.dev
 VITE_DATABASE = s3_saraighat_digital
 VITE_FQ_LOCAL_URL = http://localhost:4466
 # VITE_IMAGE_URL = https://saraighatdigital.com/storage
-VITE_IMAGE_URL = https://uploads.backendservices.in/storage/arodos/saraighat_digital
+VITE_IMAGE_URL = https://uploads.backendservices.in/storage
 VITE_IMAGE_UPLOAD_URL = https://uploads.backendservices.in/api
 VITE_UPLOAD_DIR = saraighat_digital
 VITE_UPLOAD_ID = arodos
