--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
@@ -45,6 +46,7 @@
     "react-pdf": "^9.2.1",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.24.2",
