--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
+    "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
-    "react-pdf": "^9.2.1",
+    "react-pdf": "^9.1.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "tailwind-merge": "^3.0.2",
