--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@sentry/react": "^9.6.0",
+    "@sentry/vite-plugin": "^3.2.2",
     "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
